--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "mongoose": "^6.8.4",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
